rename the CF stack

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auction-api",
+  "name": "auction-service",
   "version": "1.0.0",
   "description": "Codingly template for Serverless Framework projects",
   "author": "Ariel Weinberger <ariel@codingly.io>",
