--- a/serverless.yml
+++ b/serverless.yml
@@ -11,6 +11,20 @@ provider:
   region: ${opt:region, 'eu-west-1'}
   lambdaHashingVersion: 20201221
 
+resources:
+  Resources:
+    AuctionsTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: AuctionsTable
+        BillingMode: PAY_PER_REQUEST
+        AttributeDefinitions:
+          - AttributeName: id
+            AttributeType: S
+        KeySchema:
+          - AttributeName: id
+            KeyType: HASH
+            
 functions:
   createAuction:
     handler: src/handlers/createAuction.handler
