--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "webpack": "^5.76.0"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.288.0"
+    "@aws-sdk/client-dynamodb": "^3.288.0",
+    "@aws-sdk/lib-dynamodb": "^3.288.0"
   }
 }
