--- a/serverless.yml
+++ b/serverless.yml
@@ -12,26 +12,11 @@ provider:
   iam:
     role:
       statements:
-        - Effect: 'Allow'
-          Action:
-            - dynamodb:PutItem
-          Resource:
-            - arn:aws:dynamodb:${aws:region}:${aws:accountId}:table/AuctionsTable
-          # - Fn::GetAtt: [AuctionsTable, Arn]
+        - ${file(iam/AuctionsTableIAM.yml):AuctionsTableIAM}
 
 resources:
   Resources:
-    AuctionsTable:
-      Type: AWS::DynamoDB::Table
-      Properties:
-        TableName: AuctionsTable
-        BillingMode: PAY_PER_REQUEST
-        AttributeDefinitions:
-          - AttributeName: id
-            AttributeType: S
-        KeySchema:
-          - AttributeName: id
-            KeyType: HASH
+    AuctionsTable: ${file(resources/AuctionsTable.yml):AuctionsTable}
 
 functions:
   createAuction:
