use intrinsic functions in custom (and environemnt) variables

--- a/iam/AuctionsTableIAM.yml
+++ b/iam/AuctionsTableIAM.yml
@@ -1,7 +1,5 @@
 AuctionsTableIAM:
   Effect: 'Allow'
   Action:
-     - dynamodb:PutItem
-  Resource:
-      - arn:aws:dynamodb:${aws:region}:${aws:accountId}:table/AuctionsTable
-    # - Fn::GetAtt: [AuctionsTable, Arn]
+    - dynamodb:PutItem
+  Resource: ${self:custom.AuctionsTable.arn}
