--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.288.0",
-    "@aws-sdk/lib-dynamodb": "^3.288.0"
+    "@aws-sdk/lib-dynamodb": "^3.288.0",
+    "@middy/core": "^4.2.6",
+    "@middy/http-error-handler": "^4.2.6",
+    "@middy/http-event-normalizer": "^4.2.6",
+    "@middy/http-json-body-parser": "^4.2.6",
+    "http-errors": "^2.0.0"
   }
 }
