--- a/serverless.yml
+++ b/serverless.yml
@@ -35,12 +35,20 @@ functions:
       - http:
           method: GET
           path: /auctions
+
   getAuction:
     handler: src/handlers/getAuction.handler
     events:
       - http:
           method: GET
           path: /auction/{id}
+
+  placeBid:
+    handler: src/handlers/placeBid.handler
+    events:
+      - http:
+          method: PATCH
+          path: /auction/{id}/bid
 
 custom:
   AuctionsTable:
