--- a/resources/AuctionsTable.yml
+++ b/resources/AuctionsTable.yml
@@ -3,9 +3,23 @@ AuctionsTable:
   Properties:
     TableName: AuctionsTable-${self:provider.stage}
     BillingMode: PAY_PER_REQUEST
-    AttributeDefinitions:
+    AttributeDefinitions: # Define the attributes to query based on
       - AttributeName: id
+        AttributeType: S
+      - AttributeName: status
+        AttributeType: S
+      - AttributeName: endingAt
         AttributeType: S
     KeySchema:
       - AttributeName: id
-        KeyType: HASH
+        KeyType: HASH # Partition key
+    GlobalSecondaryIndexes:
+      - IndexName: statusAndEndDate
+        KeySchema:
+          - AttributeName: status
+            KeyType: HASH # Partition key
+          - AttributeName: endingAt
+            KeyType: RANGE # Sort and filter key
+        Projection:
+          ProjectionType: ALL
+
