--- a/serverless.yml
+++ b/serverless.yml
@@ -57,6 +57,11 @@ functions:
           method: PATCH
           path: /auction/{id}/bid
 
+  processAuctions:
+    handler: src/handlers/processAuctions.handler
+    # events:
+    #   - schedule: rate(1 minute)
+
 custom:
   AuctionsTable:
     name: !Ref AuctionsTableRes
