--- a/auction-service/serverless.yml
+++ b/auction-service/serverless.yml
@@ -28,6 +28,7 @@ functions:
       - http:
           method: POST
           path: /auction
+          authorizer: ${self:custom.Authorizer.arn}
 
   getAuctions:
     handler: src/handlers/getAuctions.handler
@@ -35,6 +36,7 @@ functions:
       - http:
           method: GET
           path: /auctions
+          authorizer: ${self:custom.Authorizer.arn}
 
   getAuction:
     handler: src/handlers/getAuction.handler
@@ -42,6 +44,7 @@ functions:
       - http:
           method: GET
           path: /auction/{id}
+          authorizer: ${self:custom.Authorizer.arn}
 
   deleteAuction:
     handler: src/handlers/deleteAuction.handler
@@ -49,6 +52,7 @@ functions:
       - http:
           method: DELETE
           path: /auction/{id}
+          authorizer: ${self:custom.Authorizer.arn}
 
   placeBid:
     handler: src/handlers/placeBid.handler
@@ -56,6 +60,7 @@ functions:
       - http:
           method: PATCH
           path: /auction/{id}/bid
+          authorizer: ${self:custom.Authorizer.arn}
 
   processAuctions:
     handler: src/handlers/processAuctions.handler
@@ -64,7 +69,10 @@ functions:
 
 custom:
   AuctionsTable:
-    name: !Ref AuctionsTableRes
+    name: !Ref AuctionsTableRes # get the name from the resource
     arn: !GetAtt AuctionsTableRes.Arn
+  Authorizer:
+    name: auth-service-${self:provider.stage}
+    arn: arn:aws:lambda:${aws:region}:${aws:accountId}:function:auth-service-dev-auth
   bundle:
     linting: false
