Auction Service: update README and package.json files

--- a/auction-service/package.json
+++ b/auction-service/package.json
@@ -1,25 +1,25 @@
 {
   "name": "auction-service",
   "version": "1.0.0",
-  "description": "Codingly template for Serverless Framework projects",
-  "author": "Ariel Weinberger <ariel@codingly.io>",
+  "description": "Cars Auction Service",
   "license": "MIT",
-  "devDependencies": {
-    "babel-loader": "^9.1.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "serverless-bundle": "^6.0.0",
-    "webpack": "^5.76.0"
-  },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.288.0",
-    "@aws-sdk/lib-dynamodb": "^3.288.0",
-    "@middy/core": "^4.2.6",
-    "@middy/http-error-handler": "^4.2.6",
-    "@middy/http-event-normalizer": "^4.2.6",
-    "@middy/http-header-normalizer": "^4.2.6",
-    "@middy/http-json-body-parser": "^4.2.6",
+    "@aws-sdk/client-dynamodb": "^3.294.0",
+    "@aws-sdk/lib-dynamodb": "^3.294.0",
+    "@middy/core": "^4.2.7",
+    "@middy/http-error-handler": "^4.2.7",
+    "@middy/http-event-normalizer": "^4.2.7",
+    "@middy/http-header-normalizer": "^4.2.7",
+    "@middy/http-json-body-parser": "^4.2.7",
     "@middy/validator": "^4.2.7",
     "http-errors": "^2.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.21.3",
+    "@babel/plugin-transform-runtime": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
+    "babel-loader": "^9.1.2",
+    "serverless-bundle": "^6.0.0",
+    "webpack": "^5.76.2"
   }
 }
