Auction: add MailQueue IAM role

--- a/auction-service/serverless.yml
+++ b/auction-service/serverless.yml
@@ -16,6 +16,7 @@ provider:
     role:
       statements:
         - ${file(iam/AuctionsTableIAM.yml):AuctionsTableIAM}
+        - ${file(iam/MailQueueIAM.yml):MailQueueIAM}
 
 resources:
   Resources:
