--- a/auction-service/package.json
+++ b/auction-service/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.294.0",
+    "@aws-sdk/client-s3": "^3.294.0",
     "@aws-sdk/client-sqs": "^3.294.0",
     "@aws-sdk/lib-dynamodb": "^3.294.0",
     "@middy/core": "^4.2.7",
