--- a/auction-service/resources/AuctionsBucket.yml
+++ b/auction-service/resources/AuctionsBucket.yml
@@ -2,6 +2,11 @@ AuctionsBucket:
   Type: AWS::S3::Bucket
   Properties:
     BucketName: ${self:custom.AuctionsBucket.name}
+    LifecycleConfiguration:
+      Rules:
+        - Id: DeleteOldAuctionsPictures
+          Status: Enabled
+          ExpirationInDays: 1
 
 
 AuctionsBucketPolicy:
