--- a/auction-service/package.json
+++ b/auction-service/package.json
@@ -9,6 +9,7 @@
     "@aws-sdk/client-sqs": "^3.294.0",
     "@aws-sdk/lib-dynamodb": "^3.294.0",
     "@middy/core": "^4.2.7",
+    "@middy/http-cors": "^4.2.7",
     "@middy/http-error-handler": "^4.2.7",
     "@middy/http-event-normalizer": "^4.2.7",
     "@middy/http-header-normalizer": "^4.2.7",
