--- a/auction-service/serverless.yml
+++ b/auction-service/serverless.yml
@@ -33,6 +33,7 @@ functions:
       - http:
           method: POST
           path: /auction
+          cors: true
           authorizer: ${self:custom.Authorizer.arn}
 
   getAuctions:
@@ -41,6 +42,7 @@ functions:
       - http:
           method: GET
           path: /auctions
+          cors: true
           authorizer: ${self:custom.Authorizer.arn}
 
   getAuction:
@@ -49,6 +51,7 @@ functions:
       - http:
           method: GET
           path: /auction/{id}
+          cors: true
           authorizer: ${self:custom.Authorizer.arn}
 
   deleteAuction:
@@ -57,6 +60,7 @@ functions:
       - http:
           method: DELETE
           path: /auction/{id}
+          cors: true
           authorizer: ${self:custom.Authorizer.arn}
 
   placeBid:
@@ -65,6 +69,7 @@ functions:
       - http:
           method: PATCH
           path: /auction/{id}/bid
+          cors: true
           authorizer: ${self:custom.Authorizer.arn}
 
   uploadAuctionPicture:
@@ -73,6 +78,7 @@ functions:
       - http:
           method: POST
           path: /auction/{id}/picture
+          cors: true
           authorizer: ${self:custom.Authorizer.arn}
 
   processAuctions:
